<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AboutActivity"
    android:layout_gravity="center"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        style="@style/HeadingFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="36dp"
        android:text="@string/the_creator_of_inviora"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/mi_photo" />

    <TextView
        style="@style/HeadingFont"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:layout_marginBottom="6dp"
        android:textSize="20sp" />

    <TextView
        style="@style/SubheadingFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/my_email"/>

    <TextView
        style="@style/RegularFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/desc_app" />
</LinearLayout>