<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@drawable/drosera_anglica_kauai"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:id="@+id/tv_name_received"
                style="@style/HeadingFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                tools:text="@string/plant_name"/>

            <TextView
                android:id="@+id/tv_name_sci_received"
                style="@style/SubheadingFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="28sp"
                tools:text="@string/plant_name_sci"/>

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp">

                <Button
                    android:id="@+id/btn_set_fav"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:letterSpacing="0.15"
                    android:backgroundTint="@color/primaryColor"
                    android:drawableLeft="@drawable/ic_baseline_star_24"
                    android:text="@string/favorite"/>

                <Button
                    android:id="@+id/btn_set_share"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/primaryColor"
                    android:drawableLeft="@drawable/ic_baseline_share_24"
                    android:letterSpacing="0.15"
                    android:text="@string/share"/>
            </LinearLayout>

            <TextView
                style="@style/SubheadingFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/asal_tanaman"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_received_origin"
                style="@style/RegularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="18dp"
                tools:text="Nama tempat asal" />

            <TextView
                style="@style/SubheadingFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/deskripsi_tanaman"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_received_detail"
                style="@style/RegularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="18dp"
                tools:text="@string/plant_detail" />

            <TextView
                style="@style/SubheadingFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sumber_pustaka"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_received_bibliography"
                style="@style/RegularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="125dp"
                android:lineHeight="18dp"
                tools:text="https://sumber.com" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>