<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_item_plant_photo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginEnd="20dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        tools:src="@drawable/drosera_anglica_kauai" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_plant_name"
            style="@style/HeadingFont"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            tools:text="@string/plant_name" />

        <TextView
            android:id="@+id/tv_item_plant_name_sci"
            style="@style/SubheadingFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="@string/plant_name_sci"
            android:textStyle="italic"
            android:layout_marginBottom="3dp" />

        <TextView
            android:id="@+id/tv_item_plant_detail"
            style="@style/RegularFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="12sp"
            tools:text="@string/plant_detail" />

    </LinearLayout>
</LinearLayout>